完成图片分享功能

--- a/app/src/main/res/menu/call_note_edit.xml
+++ b/app/src/main/res/menu/call_note_edit.xml
@@ -43,6 +43,10 @@
         android:title="@string/menu_send_to_desktop"/>
 
     <item
+        android:id="@+id/image_insert"
+        android:title="@string/menu_image_insert"/>
+
+    <item
         android:id="@+id/menu_alert"
         android:title="@string/menu_alert" />
 
