--- a/app/src/main/res/menu/note_edit.xml
+++ b/app/src/main/res/menu/note_edit.xml
@@ -47,6 +47,10 @@
         android:title="@string/menu_send_to_desktop"/>
 
     <item
+        android:id="@+id/menu_image_insert"
+        android:title="@string/menu_image_insert"/>
+
+    <item
         android:id="@+id/menu_alert"
         android:title="@string/menu_alert" />
 
