--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -85,7 +85,8 @@
 
                 <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
 
                     <net.micode.notes.ui.NoteEditText
                         android:id="@+id/note_edit_view"
@@ -106,6 +107,10 @@
                         android:orientation="vertical"
                         android:layout_marginLeft="-10dip"
                         android:visibility="gone" />
+                    <ImageView
+                        android:id="@+id/insert_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </ScrollView>
 
