--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -17,6 +17,7 @@
 
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/note_list_framelayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/list_background">
@@ -51,8 +52,9 @@
     <Button
         android:id="@+id/btn_new_note"
         android:background="@drawable/new_note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:focusable="false"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="30dp"/>
 </FrameLayout>
