--- a/app/src/main/res/menu/call_note_edit.xml
+++ b/app/src/main/res/menu/call_note_edit.xml
@@ -15,8 +15,8 @@
      limitations under the License.
 -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_delete"
@@ -36,15 +36,19 @@
 
     <item
         android:id="@+id/menu_image_share"
-        android:title="@string/menu_image_share"/>
+        android:title="@string/menu_image_share"
+        android:icon="@drawable/image_share"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_send_to_desktop"
         android:title="@string/menu_send_to_desktop"/>
 
     <item
-        android:id="@+id/image_insert"
-        android:title="@string/menu_image_insert"/>
+        android:id="@+id/menu_image_insert"
+        android:title="@string/menu_image_insert"
+        android:icon="@drawable/image_insert"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_alert"
