--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
 -->
 
 <resources>
-    <color name="user_query_highlight">#335b5b5b</color>
+    <color name="user_query_highlight">#FF0000</color>
 </resources>
