--- a/app/src/main/res/menu/call_note_edit.xml
+++ b/app/src/main/res/menu/call_note_edit.xml
@@ -57,4 +57,12 @@
     <item
         android:id="@+id/menu_delete_remind"
         android:title="@string/menu_remove_remind" />
+    <item
+        android:id="@+id/menu_font"
+        android:title="@string/menu_font"
+        android:icon="@drawable/menu_font"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/menu_speech_input"
+        android:title="@string/menu_speech_input"/>
 </menu>
