--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -402,4 +402,12 @@
                 android:src="@drawable/selected" />
         </FrameLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_speech_input"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:background="@drawable/speech_input"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="20dp"/>
 </FrameLayout>
