--- a/app/src/main/res/menu/call_note_edit.xml
+++ b/app/src/main/res/menu/call_note_edit.xml
@@ -38,7 +38,7 @@
         android:id="@+id/menu_image_share"
         android:title="@string/menu_image_share"
         android:icon="@drawable/image_share"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_send_to_desktop"
@@ -48,7 +48,7 @@
         android:id="@+id/menu_image_insert"
         android:title="@string/menu_image_insert"
         android:icon="@drawable/image_insert"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_alert"
@@ -61,7 +61,7 @@
         android:id="@+id/menu_font"
         android:title="@string/menu_font"
         android:icon="@drawable/menu_font"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/menu_speech_input"
         android:title="@string/menu_speech_input"/>
