--- a/app/src/main/res/layout/dialog_font.xml
+++ b/app/src/main/res/layout/dialog_font.xml
@@ -1,80 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:background="#ffffff">
 
     <TextView
         android:id="@+id/tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="选择文本样式"
+        android:text="文本样式"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:layout_marginTop="300dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <View
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#D5D5D5"
+        android:layout_below="@id/tv_1"
         />
 
     <LinearLayout
+        android:id="@+id/linear1"
         android:layout_width="match_parent"
-        android:layout_height="91dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line1"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/font_bold"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/font_bold" />
+        <Button
+            android:id="@+id/btn_font_bold"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/font_bold" />
 
         <View
             android:layout_width="0.5dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="40dp"
+            android:layout_gravity="center_horizontal"
             android:background="#D5D5D5" />
 
-        <ImageView
-            android:id="@+id/font_tilt"
-            android:layout_width="35sp"
-            android:layout_height="35sp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="27dp"
-            android:src="@drawable/font_tilt" />
+        <Button
+            android:id="@+id/btn_font_italic"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="50dp"
+            android:background="@drawable/font_italic" />
     </LinearLayout>
 
     <View
+        android:id="@+id/line2"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#D5D5D5"/>
+        android:layout_height="1dp"
+        android:background="#D5D5D5"
+        android:layout_below="@id/linear1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
+        android:layout_below="@id/line2"
+        android:gravity="center">
 
-        <ImageView
-            android:id="@+id/font_underline"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:src="@drawable/font_underline"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="100dp"/>
+        <Button
+            android:id="@+id/btn_font_underline"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/font_underline"
+            android:layout_marginEnd="50dp"/>
 
         <View
             android:layout_width="0.5dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="40dp"
-            android:background="#D5D5D5" />
+            android:background="#D5D5D5"
+            android:layout_gravity="center_horizontal"/>
 
-        <ImageView
-            android:id="@+id/font_large"
-            android:layout_width="55sp"
-            android:layout_height="55sp"
-            android:src="@drawable/font_large"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="8dp"/>
+        <Button
+            android:id="@+id/btn_font_size"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/font_size"
+            android:layout_marginStart="50dp"/>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
